// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Final form radio component Should render correctly 1`] = `
<div
  className="field-group form-group"
>
  <div
    className=""
  >
    <div
      className="radio"
      style={undefined}
    >
      <label
        title=""
      >
        <input
          disabled={false}
          id="name"
          name="name"
          onBlur={[MockFunction]}
          onChange={[MockFunction]}
          onFocus={[MockFunction]}
          type="radio"
          value=""
        />
        foo
      </label>
    </div>
  </div>
</div>
`;

exports[`Final form radio component Should render with error message 1`] = `
<div
  className="field-group form-group has-error"
>
  <div
    className=""
  >
    <div
      className="radio"
      style={undefined}
    >
      <label
        title=""
      >
        <input
          disabled={false}
          id="name"
          name="name"
          onBlur={[MockFunction]}
          onChange={[MockFunction]}
          onFocus={[MockFunction]}
          type="radio"
          value=""
        />
        foo
      </label>
    </div>
  </div>
</div>
`;
